[package]
name = "jukebox-channel"
version = "0.1.0"
edition.workspace = true

[dependencies]
actix-web = { workspace = true }
bytes = { workspace = true }
pin-project = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
jukebox-decoder = { path = "../jukebox-decoder" }
jukebox-playlist = { path = "../jukebox-playlist" }
futures = { workspace = true }
