[package]
name = "jukebox-rs"
version = "0.1.0"
edition = { workspace = true }


[dependencies]
clap = { version = "4.5.32", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
actix-web = { workspace = true }
bytes = { workspace = true }
pin-project = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
